[package]
name = "ioc-triage"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
csv = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
anyhow = "1"
open = "5.3.4"
